# EdgePixelizer-SFML

./: CMakeLists.txt  README.md  main.cpp
